--- a/djangomyblog/blog/templates/blog/_base.html
+++ b/djangomyblog/blog/templates/blog/_base.html
@@ -20,6 +20,25 @@
             <nav>
                 <a href="/">Início</a>
                 <a href="/about">Sobre</a>
+                {% if user.is_authenticated %}
+                    Olá, {{ user.username }} | &nbsp;
+
+                    <form action="{% url 'logout' %}" method="post" style="display: inline;">
+                        {% csrf_token %}
+                        <button type="submit" style="
+                            background: none; 
+                            border: none; 
+                            padding: 0; 
+                            cursor: pointer; 
+                            color: #fff;
+                            font-size: inherit;
+                            text-transform: uppercase;
+                            font-weight: bold;
+                        ">Sair</button>
+                    </form>                
+                {% else %}
+                    <a href="{% url 'login' %}">Login</a>
+                {% endif %}
             </nav>
         </header>
 
@@ -30,7 +49,7 @@
         </main>
 
         <footer>
-            <div>© 2025 - Joca da Silva</div>
+            <div>© 2025 - Luis Filipe Medeiros</div>
         </footer>
 
     </div>
