--- a/djangomyblog/blog/static/blog/css/style.css
+++ b/djangomyblog/blog/static/blog/css/style.css
@@ -83,10 +83,8 @@ header nav a:hover {
 /* Conteúdo principal */
 main {
     position: relative;
-    width: 100%;
-    height: 100%;
     flex-grow: 1;
-    padding: 1rem;
+    padding: 1rem 1.5rem;
     background-color: white;
 }
 
@@ -97,3 +95,4 @@ footer {
     text-align: center;
     padding: .5rem;
 }
+
