--- a/djangomyblog/blog/templates/blog/home.html
+++ b/djangomyblog/blog/templates/blog/home.html
@@ -11,7 +11,7 @@
 
 {% for post in posts %}
     <article>
-        <h3><a href="/view/{{ post.id }}">{{ post.title }}</a></h3>
+        <h3><a href="/post/{{ post.id }}">{{ post.title }}</a></h3>
         <p>{{ post.content|truncatechars:50 }}</p>
         <small>
             Por <a href="/user/{{ post.user.id }}">{{ post.user.username }}</a>
