--- a/djangomyblog/blog/templates/blog/_base.html
+++ b/djangomyblog/blog/templates/blog/_base.html
@@ -18,7 +18,11 @@
         <header>
             <h1>📄Meu Blog</h1>
             <nav>
+
                 <a href="/">Início</a>
+                {% if user.is_authenticated %}
+                <a href="/new">Novo</a>
+                {% endif %}
                 <a href="/about">Sobre</a>
                 {% if user.is_authenticated %}
                 Olá, {{ user.username }}
