--- a/djangomyblog/blog/static/blog/css/style.css
+++ b/djangomyblog/blog/static/blog/css/style.css
@@ -80,6 +80,16 @@ header nav a:hover {
     background-color: rgba(255, 255, 255, .35);
 }
 
+header > div {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+header > div span {
+    padding: 0 1rem;
+}
+
 /* Conteúdo principal */
 main {
     position: relative;
@@ -98,7 +108,6 @@ footer {
 
 .btn-logout {
     display: inline;
-    margin-left: .25rem;
 }
 
 .btn-logout button {
