--- a/djangomyblog/blog/templates/blog/_base.html
+++ b/djangomyblog/blog/templates/blog/_base.html
@@ -16,7 +16,12 @@
     <div id="wrap">
 
         <header>
-            <h1>📄Meu Blog</h1>
+            <div>
+                <h1>📄Meu Blog</h1>
+                {% if user.is_authenticated %}
+                <span>Olá, {{ user.username }}</span>
+                {% endif %}
+            </div>
             <nav>
 
                 <a href="/">Início</a>
@@ -25,8 +30,6 @@
                 {% endif %}
                 <a href="/about">Sobre</a>
                 {% if user.is_authenticated %}
-                Olá, {{ user.username }}
-
                 <form class="btn-logout" action="{% url 'logout' %}" method="post">
                     {% csrf_token %}
                     <button type="submit">Sair</button>
