--- a/djangomyblog/blog/templates/blog/_base.html
+++ b/djangomyblog/blog/templates/blog/_base.html
@@ -42,7 +42,7 @@
 
         <main>
             {% block content %}
-            <!-- Conteúdo da página específica -->
+            {# Conteúdo da página específica #}
             {% endblock %}
         </main>
 
