--- a/djangomyblog/blog/templates/blog/post_detail.html
+++ b/djangomyblog/blog/templates/blog/post_detail.html
@@ -1,3 +1,5 @@
+{# djangomyblog\blog\templates\blog\post_detail.html #}
+
 {% extends "blog/_base.html" %}
 
 {% block title %}Meu Blog - {{ post.title }}{% endblock %}
@@ -16,4 +18,33 @@
     </small>
 </p>
 <p>{{ post.content_html|safe }}</p>
+
+<hr>
+<hr>
+
+<h3>Comentários</h3>
+
+{# formulário de comentário só aparece se estiver logado #}
+{% if user.is_authenticated %}
+
+<form action="{% url 'comment_post' %}" method="post">
+
+    {% csrf_token %}
+
+    <input type="hidden" name="postid" value="{{ post.id }}">
+    <textarea name="comment" required minlength="4" placeholder="Deixe seu comentário!"></textarea>
+    <div><button type="submit">Enviar</button></div>
+
+</form>
+
+{% else %}
+
+<p style="text-align: center;"><a href="/accounts/login/">Logue-se para comentar!</a></p>
+
+{% endif %}
+
 {% endblock %}
+
+{# Lista todos os cometários deste post #}
+
+{% for comment in comme%}
